recon-tools-0.4r2   (beta)                                         12/??/2006
- ...
- major overhaul of image class
- fix to mpflash3d z-dimension length calculation
- fix to FixTimeSkew on odd-number-of-volumes issue
- fix to possible phase offset variations in ComputeFieldMap
- fix (hopefully?) to sometimes-problematic reference-phase unwrapping
- RotPlane operation replaces Rot90, which never really worked as
  advertised--see RotPlane wiki for more details on usage
- flip_slices option removed from ReorderSlices and FixTimeSkew, due to
  conflicting action in RotPlan
- NIFTI and ANALYZE orientation/transformation fields improved
- new colormaps in slice-viewer

------------------------------------------------------------------------------
recon-tools-0.4     (beta)                                         11/??/2006

  ***Libraries have changed location/name reflecting project name change!
     The "imaging" python library location is now known as "recon".
     Admins should delete the imaging/ directory from "site-packages" ***

- New features in the slice viewer:
    *zoom
    *save-as-png
    *save-montage-as-png
    *contour plotting
- FixTimeSkew bugfix (resampling corrected)
- FixTimeSkew can be configured to run as a image-magnitude interpolator:
  run after InverseFFT and set paramter data_space=imspace in the oplist
- ComputeFieldMap bugfix (2-volume asems computes correctly)
- ComputeFieldMap and GeometricUndistortionK both changed to use single
  "fmap_file" parameter (got rid of "mask_file"). Both the fieldmap volume
  and the mask volume are contained in the single file.
- bugfix to the volrange option, starting at volume 0 or 1 works now

------------------------------------------------------------------------------
recon-tools-0.3r4     (beta)                                        9/20/2006
- added left-out "lmbda" parameter in GeometricUndistortionK
- FixTimeSkew works with 2shot data